# xv6filesystemreader

./: .gitignore  README.md  fs.img  fusereader.py  pyproject.toml  reader.py  requirements.txt
scripts/: publish_to_pypi.sh
